# evaluator

./: CMakeLists.txt  LICENSE  README.md  main.cc
src/: Factory.cc  Factory.hh  PrintingEvaluator.cc  PrintingEvaluator.hh  Tokenizer.cc  Tokenizer.hh  evaluators.cc  evaluators.hh  exprtoken.hh  operands.cc  operands.hh  operations.cc  operations.hh  staticdispatcher.hh  staticdispatcher.hh-copy1
tests/: CMakeLists.txt
tests/dispatcher/: CMakeLists.txt  main.cc
tests/gtest/: CMakeLists.txt
tests/test1/: CMakeLists.txt  TestEvalExpression.cc  TestEvalExpression.hh  TestOperations.cc  TestOperationsParams.cc  TestTokenizer.cc  TestTokenizer.hh  testeval.cc  testparams.cc  testparams.hh
